# va

./: .gitignore  README.md  campaign_input.csv  pyproject.toml  requirements.txt
app/: acs_transport.py  agent_settings.py  call_session.py  call_timeline.py  dialer.py  main.py  pipecat_pipeline.py  samantha_prompt.py  transcript_processor.py
